--- a/قرة العيون في تبسيط لغة بايثون.ipynb
+++ b/قرة العيون في تبسيط لغة بايثون.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198fde3d",
+   "id": "e17fdc02",
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
@@ -286,7 +286,14 @@
     "<strong>\n",
     "الفصل التاسع:\n",
     "</strong>\n",
-    "<a href=\"الفصل%20التاسع-البرمجة%20الكائنية%20في%20بايثون.ipynb\">\n",
+    "<a href=\"الفصل%20التسع-واجهة%20المستخدم%20GUI.ipynb\">\n",
+    "واجهة المستخدم GUI\n",
+    "</a>\n",
+    "<br>\n",
+    "<strong>\n",
+    "الفصل العاشر:\n",
+    "</strong>\n",
+    "<a href=\"الفصل%20العاشر-البرمجة%20الكائنية%20في%20بايثون.ipynb\">\n",
     "البرمجة الكائنية في بايثون\n",
     "</a>\n",
     "<br>\n",
