intial build for book website

--- a/الفصل الثاني-المبادئ الاساسية للغة بايثون.ipynb
+++ b/الفصل الثاني-المبادئ الاساسية للغة بايثون.ipynb
@@ -250,6 +250,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89f58e7b",
+   "metadata": {},
+   "source": [
+    "## تعريف البرنامج\n",
+    "يمكن تعريف البرنامج على أنه تسلسل منطقي لمجموعة من التعليمات المكتوبة بطريقة معينة ومحددة يستطيع ان يفهما ويتعامل معها مفسر اللغة التي كتبت من اجله هذه التعليمات. فالتعليمات التي تكتب في برنامج على نسق قواعد لغة البايثون لا يستطيع ان يفهما ويتعامل معها الا مفسر بايثون والتعليمات التي تكتب على نسق لغة جافا لا يستطيع التعامل معها الا مفسر جافا وهكذا الحال مع بقية لغات البرمجة. وتنحصر هذه التعليمات بشكل عام على أداء خمسة وظائف رئيسية:    \n",
+    "أولاً:  الحصول على بيانات من لوحة المفاتيح أو من ملف أو  أي اداة اخرى مربوطة بالكمبيوتر كالفأرة ونحوها.    \n",
+    "ثانياً: اظهار البيانات على الشاشة او ارسالها الى ملف او اي اداة اخرى مربوطة بجهاز الكمبيوتر كالسماعات ونحوها.     \n",
+    "ثالثاً: إجراء العمليات الحسابية على البيانات كالجمع والطرح والضرب ونحوها.    \n",
+    "رابعاً: إجراء العمليات المنطقية على البيانات وتحديد ما يجب تنفيذه وما لا يجب تنفيذه للوصول للنتائج المطلوبة.     \n",
+    "خامساً: تكرار العمليات على البيانات متى ما احتاج الأمر الى ذلك والتوقف عند الحصول على النتائج المطلوبة.     \n",
+    "لك أن تتخيل أن كل ما تشاهده اليوم من برامج كمبيوترية كبيرة ومعقدة هو نتاج عمل التعليمات التي تؤدي هذه الوظائف الخمس فقط. لذلك يمكن تعريف المبرمج على أنه كل من له درابة بقواعد كتابة التعليمات (يطلق على هذه التعليمات بشكل شائع اكواد برمجية) للغة معينة ولديه مهارة بتفكيك اي مشكلة تتطلب حلا كمبيوترياً الى تعليمات بسطية متسلسلة بشكل منطقي تقوم باداء وظائف مشابهه لتلك الوظائف الخمس السابقة.     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c783e942",
    "metadata": {},
    "source": [
@@ -257,7 +272,7 @@
     "<h2 class=title>\n",
     "المتغيرات\n",
     "</h2>\n",
-    "المتغيرات هي اسماء تستخدم للدلالة على قيم بيانات موجودة في ذاكرة الكمبيوتر. واستخدام المتغيرات في كتابة الاكواد البرمجية ذو اهمية قصوى بحيث لا يكاد يخلو برنامج من وجود متغير واحد او اكثر وذلك لانها تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلا من استخدام قيم البيانات ذاتها. لاسناد قيمة الى متغير فاننا نختار اسما مناسب للمتغير ومن ثم نضع علامة اليساوي واخيرا نضع القيمة المراد اسنادها للمتغير كما في المثال التالي:\n",
+    "المتغيرات هي اسماء تستخدم للدلالة على قيم البيانات التي يراد حفظها في ذاكرة الكمبيوتر. واستخدام المتغيرات في كتابة الأكواد البرمجية ذو أهمية قصوى بحيث لا يكاد يخلو برنامج من وجود متغير واحد أو أكثر وذلك لأنها تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلاً من استخدام قيم البيانات ذاتها. لإسناد قيمة الى متغير فإننا نختار اسماً مناسباً للمتغير ومن ثم نضع علامة اليساوي وأخيراً نضع القيمة المراد إسنادها للمتغير كما في المثال التالي:\n",
     "</div>"
    ]
   },
@@ -277,9 +292,8 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "في المثال السابق علامة اليساوي تمسى معامل الاسناد. لذلك يصبح الان بمقدورنا استخدام x عوضا عن القيمة 5 في اي عمليات حسابية.  كما يجب التنويه الى ان قيمة x قابلة للتغيير. فعند تكرار المثال السابق باستخدام القيمة 10 فان  x اﻵن تصبح تشير للقيمة 10 عوضا عن القيمة 5 كما في المثال التالي:\n",
-    "</div>\n",
-    "\n"
+    "في المثال السابق علامة اليساوي تسمى معامل الاسناد. لذلك يصبح الآن بمقدورنا استخدام x عوضا عن القيمة 5 في أي عمليات حسابية.  كما يجب التنويه إلى أن قيمة x قابلة للتغيير. فعند تكرار المثال السابق باستخدام القيمة 10 فإن  x اﻵن تصبح تشير للقيمة 10 عوضاً عن القيمة 5 كما في المثال التالي:\n",
+    "</div>"
    ]
   },
   {
