--- a/كيف تقرأ الكتاب.ipynb
+++ b/كيف تقرأ الكتاب.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "96d07da3",
    "metadata": {},
    "outputs": [
@@ -160,13 +160,26 @@
        "}\n",
        "ol {\n",
        "    margin-right:25px;\n",
+       "}\n",
+       "\n",
+       ".grid-container {\n",
+       "  display: grid;\n",
+       "  grid-template-columns: 50% 50%;\n",
+       "  gap: 2px;\n",
+       "  padding: 2px;\n",
+       "}\n",
+       "\n",
+       ".grid-container > div {\n",
+       "  text-align: center;\n",
+       "  padding: 20px 0;\n",
+       "  font-size: 20px;\n",
        "}</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
