creating link for the book website

--- a/كيف تقرأ الكتاب.ipynb
+++ b/كيف تقرأ الكتاب.ipynb
@@ -259,11 +259,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de3a4bbb",
    "metadata": {},
    "source": [
-    "[تنصيب دفتر ملاحظات جوبتر باستخدام الاداة pip](https://screenrec.com/share/f1LFXzG9ie)"
+    "[تنصيب دفتر ملاحظات جوبتر باستخدام الاداة pip](https://www.youtube.com/watch?v=U1WubOVB3og)"
    ]
   },
   {
