improve book chapter with pyscript

--- a/الفصل الاول- نبذة عن بايثون.ipynb
+++ b/الفصل الاول- نبذة عن بايثون.ipynb
@@ -233,6 +233,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bcbf782b",
    "metadata": {},
@@ -245,21 +246,28 @@
     " <a href=\"http://www.python.org\">www.python.org</a>\n",
     " هناك توزيعات اخري تأتي محملة بمكتبات ومدير ادارة مكتبات تهدف الى اراحة المستخدم من عناء تحميل المكتبات واضافتها للاصدارة الرسمية. معظم هذه التوزيعات تأتي على شكل اصدارة مجانية واصدارة تجارية.ومن بين هذه التوزيعات مايلي:\n",
     "<br>\n",
-    "<ul>\n",
+    "<ol>\n",
     "<li>\n",
     "توزيعة Anaconda: يمكن تحميل هذه التوزيعة من\n",
     " <a href=\"http://www.continuum.io\">www.continuum.io</a>\n",
     "  ويمكن تنصيب هذه التوزيعة على ويندوز وماك ولينكس. تحتوي التوزيعة على اكثر من 100 مكتبة و مدير ادارة مكتبات يدعى conda. كما يوجد لهذه التوزيعة اصدارة مصغرة تدعى miniconda واصدارات تجارية اخرى.\n",
+    "</li>\n",
     "<li>\n",
     "توزيعة Enthought Canopy: يمكن تحميل هذه التوزيعة من \n",
     "<a href=\"http://www.enthought.com/porducts/canopy\">www.enthought.com/products/canopy</a>\n",
     " . تأتي هذه التوزيعة باصدارة تجارية واصدارة مجانية لمدة سنه قابلة للتجديد للاكاديمين والطلاب و لكن بعد اجراء عملية التسجيل. تحتوي الاصدارة على مفسر بايثون 2 و اكثر من 450 مكتبة متخصصة للاغراض العلمية والتحليلية. كما ان عملية التسجيل تسمح للمستخدم بالاطلاع على الفيديوهات التعليمية المعمولة من قبل Enthought . \n",
+    "</li>\n",
     "<li>\n",
     "توزيعة ActivePython:\n",
-    "\n",
-    "</ul>\n",
+    "</ol>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6338e854",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
