solve font file issue

--- a/قرة العيون في تبسيط لغة بايثون.ipynb
+++ b/قرة العيون في تبسيط لغة بايثون.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "bacc1ccb-c649-4bf6-83f6-415fa2be3207",
    "metadata": {},
    "outputs": [
@@ -19,10 +19,10 @@
        "\n",
        ".title{\n",
        "direction: rtl;\n",
-       "font-size:100px;\n",
+       "font-size:50px;\n",
        "padding-right: 15px;\n",
        "line-height:10px;\n",
-       "font-family:basim-marah;\n",
+       "font-family:Arslan;\n",
        "}\n",
        "\n",
        "div.text_cell pre.CodeMirror-line {\n",
@@ -35,7 +35,7 @@
        "text-align:justify;\n",
        "font-family:amiri-quran;\n",
        "}\n",
-       ".rendered_html {\n",
+       ".jp-RenderedHTMLCommon {\n",
        "direction:rtl;\n",
        "font-size:20px;\n",
        "line-height:40px;\n",
@@ -55,7 +55,7 @@
        "font-family:amiri-quran;\n",
        "}\n",
        "\n",
-       ".rendered_html h1{\n",
+       ".jp-RenderedHTMLCommon h1{\n",
        "direction: rtl;\n",
        "font-size:200%;\n",
        "text-align:center;\n",
@@ -63,7 +63,7 @@
        "font-family:Arslan;\n",
        "}\n",
        "\n",
-       ".rendered_html h2{\n",
+       ".jp-RenderedHTMLCommon h2{\n",
        "direction: rtl;\n",
        "font-size:171%;\n",
        "padding-right: 55px;\n",
@@ -71,7 +71,7 @@
        "font-family:Arslan;\n",
        "}\n",
        "\n",
-       ".rendered_html h3{\n",
+       ".jp-RenderedHTMLCommon h3{\n",
        "direction: rtl;\n",
        "font-size:141%;\n",
        "padding-right: 55px;\n",
@@ -79,11 +79,11 @@
        "font-family:Arslan;\n",
        "}\n",
        "\n",
-       ".rendered_html ul {\n",
+       ".jp-RenderedHTMLCommon ul {\n",
        "    list-style-type: none;\n",
        "}\n",
        "\n",
-       ".rendered_html ul li:before {\n",
+       ".jp-RenderedHTMLCommon ul li:before {\n",
        "  content: '-';\n",
        "  position: absolute;\n",
        "  margin-right: -10px;\n",
@@ -179,7 +179,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
