--- a/الفصل الاول- نبذة عن بايثون.ipynb
+++ b/الفصل الاول- نبذة عن بايثون.ipynb
@@ -19,10 +19,10 @@
        "\n",
        ".title{\n",
        "direction: rtl;\n",
-       "font-size:100px;\n",
+       "font-size:50px;\n",
        "padding-right: 15px;\n",
        "line-height:10px;\n",
-       "font-family:basim-marah;\n",
+       "font-family:Arslan;\n",
        "}\n",
        "\n",
        "div.text_cell pre.CodeMirror-line {\n",
@@ -35,7 +35,7 @@
        "text-align:justify;\n",
        "font-family:amiri-quran;\n",
        "}\n",
-       ".rendered_html {\n",
+       ".jp-RenderedHTMLCommon {\n",
        "direction:rtl;\n",
        "font-size:20px;\n",
        "line-height:40px;\n",
@@ -55,15 +55,15 @@
        "font-family:amiri-quran;\n",
        "}\n",
        "\n",
-       ".rendered_html h1{\n",
+       ".jp-RenderedHTMLCommon h1{\n",
        "direction: rtl;\n",
        "font-size:200%;\n",
        "text-align:center;\n",
        "padding-right: 55px;\n",
-       "font-family:Arslan;\n",
+       "font-family:basim-marah;\n",
        "}\n",
        "\n",
-       ".rendered_html h2{\n",
+       ".jp-RenderedHTMLCommon h2{\n",
        "direction: rtl;\n",
        "font-size:171%;\n",
        "padding-right: 55px;\n",
@@ -71,7 +71,7 @@
        "font-family:Arslan;\n",
        "}\n",
        "\n",
-       ".rendered_html h3{\n",
+       ".jp-RenderedHTMLCommon h3{\n",
        "direction: rtl;\n",
        "font-size:141%;\n",
        "padding-right: 55px;\n",
@@ -79,11 +79,11 @@
        "font-family:Arslan;\n",
        "}\n",
        "\n",
-       ".rendered_html ul {\n",
+       ".jp-RenderedHTMLCommon ul {\n",
        "    list-style-type: none;\n",
        "}\n",
        "\n",
-       ".rendered_html ul li:before {\n",
+       ".jp-RenderedHTMLCommon ul li:before {\n",
        "  content: '-';\n",
        "  position: absolute;\n",
        "  margin-right: -10px;\n",
@@ -157,6 +157,22 @@
        ".basic_table{\n",
        "    font-size:20px;\n",
        "    color:\"green\";\n",
+       "}\n",
+       "ol {\n",
+       "    margin-right:25px;\n",
+       "}\n",
+       "\n",
+       ".grid-container {\n",
+       "  display: grid;\n",
+       "  grid-template-columns: 50% 50%;\n",
+       "  gap: 2px;\n",
+       "  padding: 2px;\n",
+       "}\n",
+       "\n",
+       ".grid-container > div {\n",
+       "  text-align: center;\n",
+       "  padding: 20px 0;\n",
+       "  font-size: 20px;\n",
        "}</style>"
       ],
       "text/plain": [
@@ -286,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
