--- a/مقدمة الكتاب.ipynb
+++ b/مقدمة الكتاب.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "97acdaeb",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ahmadalsaadi/arabic-python-notebook/blob/main/مقدمة%20الكتاب.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "166c6159",
