Apply RTL and Amiri font to مقدمة الكتاب

--- a/مقدمة الكتاب.ipynb
+++ b/مقدمة الكتاب.ipynb
@@ -202,7 +202,10 @@
    "id": "976290d8",
    "metadata": {},
    "source": [
-    " # مقدمة الكتاب "
+    "<link href=\"https://fonts.googleapis.com/css2?family=Amiri&display=swap\" rel=\"stylesheet\">\n",
+    "<div dir=\"rtl\" style=\"font-family: 'Amiri', serif; text-align: right;\">\n",
+    "<h1>مقدمة الكتاب</h1>\n",
+    "</div>"
    ]
   },
   {
