Improve Arabic alignment in مقدمة الكتاب

--- a/مقدمة الكتاب.ipynb
+++ b/مقدمة الكتاب.ipynb
@@ -203,8 +203,8 @@
    "metadata": {},
    "source": [
     "<link href=\"https://fonts.googleapis.com/css2?family=Amiri&display=swap\" rel=\"stylesheet\">\n",
-    "<div dir=\"rtl\" style=\"font-family: 'Amiri', serif; text-align: right;\">\n",
-    "<h1>مقدمة الكتاب</h1>\n",
+    "<div dir=\"rtl\" style=\"font-family: 'Amiri', serif; text-align: right; text-align-last: right;\">\n",
+    "<h1 style=\"margin: 0;\">مقدمة الكتاب</h1>\n",
     "</div>"
    ]
   },
