Add responsive RTL styling for Arabic text

--- a/مقدمة الكتاب.ipynb
+++ b/مقدمة الكتاب.ipynb
@@ -203,8 +203,35 @@
    "metadata": {},
    "source": [
     "<link href=\"https://fonts.googleapis.com/css2?family=Amiri&display=swap\" rel=\"stylesheet\">\n",
-    "<div dir=\"rtl\" style=\"font-family: 'Amiri', serif; text-align: right; text-align-last: right;\">\n",
-    "<h1 style=\"margin: 0;\">مقدمة الكتاب</h1>\n",
+    "<style>\n",
+    ".rtl-container {\n",
+    "  direction: rtl;\n",
+    "  text-align: right;\n",
+    "  text-align-last: right;\n",
+    "  font-family: 'Amiri', serif;\n",
+    "  line-height: 1.9;\n",
+    "  font-size: clamp(16px, 2.2vw, 20px);\n",
+    "  max-width: 100%;\n",
+    "  margin: 0 auto;\n",
+    "  padding: 0 12px;\n",
+    "  box-sizing: border-box;\n",
+    "}\n",
+    ".rtl-title {\n",
+    "  font-size: clamp(22px, 3vw, 30px);\n",
+    "  margin: 0 0 8px 0;\n",
+    "}\n",
+    ".rtl-grid {\n",
+    "  display: flex;\n",
+    "  flex-wrap: wrap;\n",
+    "  gap: 12px 24px;\n",
+    "  align-items: center;\n",
+    "}\n",
+    ".rtl-grid a {\n",
+    "  text-decoration: none;\n",
+    "}\n",
+    "</style>\n",
+    "<div class=\"rtl-container\">\n",
+    "  <h1 class=\"rtl-title\">مقدمة الكتاب</h1>\n",
     "</div>"
    ]
   },
